[gd_scene load_steps=5 format=2]

[ext_resource path="res://Weapons/Textures/AT_Bullet.tres" type="Texture" id=1]
[ext_resource path="res://Weapons/Bullets/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.5, 0.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 0.5, 0.5 )

[node name="Bullet" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 517
script = ExtResource( 2 )

[node name="Bullet" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 5
lifetime = 0.25
one_shot = true
spread = 180.0
initial_velocity = 40.86
initial_velocity_random = 0.7
color = Color( 0.42, 0.09604, 0.0462, 1 )

[node name="HitArea2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea2D"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HitArea2D" to="." method="_on_HitArea2D_area_entered"]
[connection signal="body_entered" from="HitArea2D" to="." method="_on_HitArea2D_body_entered"]
